--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,11 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r agent/requirements.txt
+          pip install ruff mypy
+      - name: Lint
+        run: ruff check agent/src
+      - name: Type check
+        run: mypy agent/src
       - name: Run tests
         run: |
           PYTHONPATH=agent/src python -m unittest discover agent/tests -v
