--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
-* text=auto eol=lf
-
-/gui/package-lock.json binary
+*.py text eol=lf
+*.js text eol=lf
+*.ts text eol=lf
+*.sh text eol=lf
+* text=auto
+gui/package-lock.json binary
