ci: run pre-commit in tests workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r agent/requirements.txt
-          pip install ruff mypy pytest pytest-cov
+          pip install ruff mypy pytest pytest-cov pre-commit
       - name: Lint
-        run: ruff check agent/src
+        run: pre-commit run --all-files
       - name: Type check
         run: mypy agent/src
       - name: Run tests
