--- a/agent/requirements.txt
+++ b/agent/requirements.txt
@@ -7,9 +7,16 @@ pandas==2.2.2
 requests==2.32.3
 protobuf==4.25.3
 orjson==3.10.7
-geopy==2.4.1
 streamlit==1.37.0
 types-requests==2.32.4.20250809
 httpx==0.27.0
 rich==13.7.1
 pydantic==2.9.2
+gspread==6.1.3
+apprise==1.9.4
+weasyprint==62.3
+docxtpl==0.16.7
+fastapi==0.111.0
+uvicorn==0.30.0
+ortools==9.10.4067
+jinja2==3.1.4
