--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,17 +6,36 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: mixed-line-ending
+
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.6.9
     hooks:
       - id: ruff
         args: [--fix]
-  - repo: https://github.com/pycqa/isort
-    rev: 5.13.2
+      - id: ruff-format
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.11.2
     hooks:
-      - id: isort
-        args: ["--profile", "black"]
-  - repo: https://github.com/psf/black
-    rev: 24.8.0
+      - id: mypy
+        additional_dependencies: []
+
+  - repo: https://github.com/pypa/pip-audit
+    rev: v2.7.3
     hooks:
-      - id: black
+      - id: pip-audit
+        args: ["-r", "requirements.txt", "--strict"]
+        files: ^(requirements(_.*)?\.txt|pyproject\.toml)$
+        pass_filenames: false
+
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: v8.18.4
+    hooks:
+      - id: gitleaks
+        args: ["protect","--verbose","--staged"]
+
+  - repo: https://github.com/fpgmaas/deptry
+    rev: 0.16.1
+    hooks:
+      - id: deptry
+        args: ["--ignore-notebooks"]
