--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,42 @@
+[build-system]
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [tool.ruff]
 line-length = 100
 target-version = "py311"
+lint.select = ["E","F","I","B","UP","SIM","C90","D"]
+lint.ignore = ["D100","D104","D401"]
+lint.extend-select = ["PL","RUF"]
+fix = true
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+docstring-code-format = true
+
+[tool.pytest.ini_options]
+minversion = "7.0"
+addopts = "-q --strict-markers --disable-warnings"
+testpaths = ["agent/tests", "tests"]
+
+[tool.coverage.run]
+branch = true
+source = ["agent"]
+parallel = true
+
+[tool.coverage.report]
+show_missing = true
+skip_covered = true
+fail_under = 85
 
 [tool.mypy]
-ignore_missing_imports = true
+python_version = "3.11"
+strict = true
+warn_unused_ignores = true
+warn_redundant_casts = true
+warn_return_any = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+no_implicit_optional = true
+plugins = []
